--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   # State management (optional for future use)
   provider: ^6.1.2
 
+  # Localization
+  flutter_localizations:
+    sdk: flutter
+
   # Firebase
   firebase_core: ^3.8.0
   firebase_auth: ^5.3.3
@@ -54,10 +58,11 @@ dependencies:
   # Local storage
   shared_preferences: ^2.3.3
   hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
   # Utilities
   connectivity_plus: ^6.1.1
-  intl: ^0.19.0
+  intl: ^0.20.2
 
   # Notifications and permissions
   flutter_local_notifications: ^17.2.3
@@ -65,7 +70,7 @@ dependencies:
   permission_handler: ^11.3.1
 
   # OCR and media
-  google_mlkit_text_recognition: ^0.14.0
+  google_mlkit_text_recognition: ^0.15.0
   image: ^4.2.0
   image_picker: ^1.1.2
 
@@ -90,6 +95,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  # Enable generation of localization files (AppLocalizations)
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
