--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
+  # Charts
+  fl_chart: ^0.70.0
+
   # Firebase
   firebase_core: ^3.8.0
   firebase_auth: ^5.3.3
