--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
 
   # State management (optional for future use)
-  provider: ^6.1.2
+  provider: ^6.1.5+1
 
   # Localization
   flutter_localizations:
@@ -71,11 +71,19 @@ dependencies:
   flutter_local_notifications: ^17.2.3
   timezone: ^0.9.4
   permission_handler: ^11.3.1
+  speech_to_text: ^7.3.0
 
   # OCR and media
   google_mlkit_text_recognition: ^0.15.0
   image: ^4.2.0
   image_picker: ^1.1.2
+  file_picker: ^8.1.5
+  camera: ^0.11.0+2
+
+  # Deeplinks (for SOS via SMS intent)
+  url_launcher: ^6.3.0
+  uuid: ^4.5.1
+
 
 dev_dependencies:
   flutter_test:
