--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   # Utilities
   connectivity_plus: ^6.1.1
   intl: ^0.20.2
+  google_fonts: ^6.2.1
 
   # Notifications and permissions
   flutter_local_notifications: ^17.2.3
